# Spider2

./: .gitignore  AGENTS.md  PLAN_DDL.md  justfile  pyproject.toml
methods/sol01/: .env.example  PLAN.md  README.md  justfile  progress_ui.py  pyproject.toml  run.py  snowflake_credential.example.json
methods/sol01/.ralph/: ralph-history.json  ralph-loop.state.json
methods/sol01/docs/: RETRIEVAL_VERIFICATION.md  SCHEMA_CONTEXT_VERIFICATION.md  SOLUTION_OVERVIEW.md
methods/sol01/metadata/: category_metadata.jsonl  large_schema_summaries.json
methods/sol01/sol01/: __init__.py  analysis.py  candidate_evaluator.py  candidate_scoring.py  candidate_verification.py  category_metadata.py  cli.py  config.py  coordinator.py  docs.py  eval_runner.py  gold_run.py  index.py  llm.py  llm_call_log.py  llm_call_logs.py  logging.py  models.py  observability.py  output.py  pipeline.py  pipeline_output.py  pipeline_recovery.py  pipeline_state.py  pipeline_support.py  profiling.py  recovery_signals.py  registry.py  retrieval.py  run_mode.py  snow_smoke.py  snowflake_runner.py  sqlite_runner.py  tasks.py  validation.py  workflow.py
methods/sol01/tests/: test_analysis.py  test_category_metadata.py  test_cli.py  test_config.py  test_coordinator.py  test_docs.py  test_eval_runner.py  test_filter_grounding.py  test_gold_run.py  test_hybrid_retrieval.py  test_index.py  test_justfile.py  test_large_schema_summaries.py  test_llm.py  test_llm_call_logs.py  test_logging.py  test_models.py  test_normalization.py  test_observability.py  test_ollama_provider.py  test_output.py  test_readme.py  (+24 more)
(+143 files in other folders)
