[project]
name = "sol01"
version = "0.1.0"
description = "SQLite-local Spider2-Lite solver using Pydantic AI and OpenRouter."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-cloud-bigquery>=3.38.0",
    "logfire>=4.32.1",
    "pandas>=2.2.0",
    "pydantic>=2.7.0",
    "pydantic-ai>=0.0.19",
    "python-dotenv>=1.1.1",
    "pytest>=8.0.0",
    "rich>=13.7.0",
    "structlog>=25.0.0",
    "sqlglot>=25.0.0",
    "typer>=0.12.0",
]

[project.scripts]
sol01 = "sol01.cli:app"

[dependency-groups]
dev = [
    "ruff>=0.15.12,<0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
